--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
         with:
-          ref: 'main'
+          ref: 'master'
           path: ${{ env.K6_WORK_DIR_PATH }}
           repository: hashicorp/tfe-load-test
           token: ${{ secrets.GH_TFE_LOAD_TEST_TOKEN }}
@@ -272,7 +272,7 @@ jobs:
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
         with:
-          ref: 'main'
+          ref: 'master'
           path: ${{ env.K6_WORK_DIR_PATH }}
           repository: hashicorp/tfe-load-test
           token: ${{ secrets.GH_TFE_LOAD_TEST_TOKEN }}
@@ -535,7 +535,7 @@ jobs:
       - name: Checkout TFE Load Test
         uses: actions/checkout@v2
         with:
-          ref: 'main'
+          ref: 'master'
           path: ${{ env.K6_WORK_DIR_PATH }}
           repository: hashicorp/tfe-load-test
           token: ${{ secrets.GH_TFE_LOAD_TEST_TOKEN }}
