--- a/examples/standalone-airgap/terraform.tfvars.example
+++ b/examples/standalone-airgap/terraform.tfvars.example
@@ -1,12 +1,19 @@
-namespace            = "user-friendly-name"
-fqdn                 = "tfe.my.domain.com"
-ssl_certificate_name = "certificate-name-xxxxxxxxxxxxxxxxxxxxx"
 dns_zone_name        = "my.domain.com"
+fqdn                 = "tfe.my.domain.com"
+google               = {
+                        service_account = "google-service-account"
+                        credentials     = "1a2s3d4f1a2s1q2w4r5t61a2s3d4f1a2s3d4f5g"
+                        project         = "google-project-name"
+                        region          = "us-east1"
+                        zone            = "us-east1-b"
+                       }
+labels               = {
+                        department  = "engineering"
+                        description = "standalone-airgap"
+                        repository  = "hashicorp-terraform-google-terraform-enterprise"
+                        team        = "my-team-name"
+                       }
+license_file         = "/full/path/to/my/tfe/license.rli"
+namespace            = "user-friendly-name"
+ssl_certificate_name = "certificate-name-xxxxxxxxxxxxxxxxxxxxx"
 vm_disk_source_image = "projects/my-project/global/images/my-airgap-image"
-
-labels = {
-  department  = "engineering"
-  description = "standalone-airgap"
-  repository  = "hashicorp-terraform-google-terraform-enterprise"
-  team        = "my-team-name"
-}
