--- a/.github/workflows/handler-destroy.yml
+++ b/.github/workflows/handler-destroy.yml
@@ -100,6 +100,14 @@ jobs:
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: terraform destroy -auto-approve -input=false -no-color
 
+      - name: Terraform Delete Workspace
+        id: destroy-workspace
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        env:
+          TFE_HOSTNAME: ${{ secrets.TFE_HOSTNAME }}
+          TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
+        run: terraform workspace delete google-private-tcp-active-active-${{ github.event.client_payload.github.payload.issue.number }} -no-color
+
       - name: Update comment
         if: ${{ always() }}
         uses: peter-evans/create-or-update-comment@v1
@@ -115,6 +123,8 @@ jobs:
             ${{ format('- {0} Terraform Init', steps.init.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
             ${{ format('- {0} Terraform Destroy', steps.destroy.outcome == 'success' && ':white_check_mark:' || ':x:') }}
+
+            ${{ format('- {0} Terraform Destroy Workspace', steps.destroy-workspace.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
 
   private_active_active:
     name: Destroy resources from Private Active/Active
@@ -210,6 +220,15 @@ jobs:
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: terraform destroy -auto-approve -input=false -no-color
 
+      - name: Terraform Delete Workspace
+        id: destroy-workspace
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        env:
+          TFE_HOSTNAME: ${{ secrets.TFE_HOSTNAME }}
+          TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
+        run: terraform workspace delete google-private-tcp-active-active-${{ github.event.client_payload.github.payload.issue.number }} -no-color
+
+
       - name: Update comment
         if: ${{ always() }}
         uses: peter-evans/create-or-update-comment@v1
@@ -225,6 +244,8 @@ jobs:
             ${{ format('- {0} Terraform Init', steps.init.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
             ${{ format('- {0} Terraform Destroy', steps.destroy.outcome == 'success' && ':white_check_mark:' || ':x:') }}
+
+            ${{ format('- {0} Terraform Destroy Workspace', steps.destroy-workspace.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
 
   private_tcp_active_active:
     name: Destroy resources from Private TCP Active/Active
@@ -321,6 +342,14 @@ jobs:
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: terraform destroy -auto-approve -input=false -no-color
 
+      - name: Terraform Delete Workspace
+        id: destroy-workspace
+        working-directory: ${{ env.WORK_DIR_PATH }}
+        env:
+          TFE_HOSTNAME: ${{ secrets.TFE_HOSTNAME }}
+          TFE_TOKEN: ${{ secrets.TFE_TOKEN }}
+        run: terraform workspace delete google-private-tcp-active-active-${{ github.event.client_payload.github.payload.issue.number }} -no-color
+
       - name: Update comment
         if: ${{ always() }}
         uses: peter-evans/create-or-update-comment@v1
@@ -336,3 +365,5 @@ jobs:
             ${{ format('- {0} Terraform Init', steps.init.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
             ${{ format('- {0} Terraform Destroy', steps.destroy.outcome == 'success' && ':white_check_mark:' || ':x:') }}
+
+            ${{ format('- {0} Terraform Destroy Workspace', steps.destroy-workspace.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
