--- a/.github/workflows/handler-test.yml
+++ b/.github/workflows/handler-test.yml
@@ -214,7 +214,7 @@ jobs:
         run: terraform destroy -auto-approve -input=false -no-color
 
       - name: Terraform Delete Workspace
-        id: destroy
+        id: destroy-workspace
         if: ${{ always() && github.event.client_payload.slash_command.args.named.destroy != 'false' }}
         working-directory: ${{ env.WORK_DIR_PATH }}
         env:
@@ -243,6 +243,8 @@ jobs:
             ${{ format('- {0} Run k6 Smoke Test', steps.run-smoke-test.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
             ${{ github.event.client_payload.slash_command.args.named.destroy != 'false' && format('- {0} Terraform Destroy', steps.destroy.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
+
+            ${{ github.event.client_payload.slash_command.args.named.destroy != 'false' && format('- {0} Terraform Destroy Workspace', steps.destroy-workspace.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
 
   private_active_active:
     name: Run tf-test on Private Active/Active
@@ -485,7 +487,7 @@ jobs:
         run: terraform destroy -auto-approve -input=false -no-color
 
       - name: Terraform Delete Workspace
-        id: destroy
+        id: destroy-workspace
         if: ${{ always() && github.event.client_payload.slash_command.args.named.destroy != 'false' }}
         working-directory: ${{ env.WORK_DIR_PATH }}
         env:
@@ -514,6 +516,8 @@ jobs:
             ${{ format('- {0} Run k6 Smoke Test', steps.run-smoke-test.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
             ${{ github.event.client_payload.slash_command.args.named.destroy != 'false' && format('- {0} Terraform Destroy', steps.destroy.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
+
+            ${{ github.event.client_payload.slash_command.args.named.destroy != 'false' && format('- {0} Terraform Destroy Workspace', steps.destroy-workspace.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
 
   private_tcp_active_active:
     name: Run tf-test on Private TCP Active/Active
@@ -753,13 +757,13 @@ jobs:
           make smoke-test
 
       - name: Terraform Destroy
-        id: destroy
+        id: destroy-workspace
         if: ${{ always() && github.event.client_payload.slash_command.args.named.destroy != 'false' }}
         working-directory: ${{ env.WORK_DIR_PATH }}
         run: terraform destroy -auto-approve -input=false -no-color
 
       - name: Terraform Delete Workspace
-        id: destroy
+        id: destroy-workspace
         if: ${{ always() && github.event.client_payload.slash_command.args.named.destroy != 'false' }}
         working-directory: ${{ env.WORK_DIR_PATH }}
         env:
@@ -788,3 +792,7 @@ jobs:
             ${{ format('- {0} Run k6 Smoke Test', steps.run-smoke-test.outcome == 'success' && ':white_check_mark:' || ':x:') }}
 
             ${{ github.event.client_payload.slash_command.args.named.destroy != 'false' && format('- {0} Terraform Destroy', steps.destroy.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
+
+            ${{ github.event.client_payload.slash_command.args.named.destroy != 'false' && format('- {0} Terraform Destroy Workspace', steps.destroy-workspace.outcome == 'success' && ':white_check_mark:' || ':x:') || '' }}
+
+            
